Fix padding on smaller screen sizes

--- a/modules/styles/board/header.less
+++ b/modules/styles/board/header.less
@@ -6,8 +6,6 @@
 	word-break: break-word;
 	max-width: 700px;
 	padding-top: 10px;
-	padding-right: 15px;
-	padding-left: 5px;
 	position: relative;
 	z-index: 3;
 }
